service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-svc
  namespace: hello-world-api
  labels:
    app: hello-world-api
spec:
  selector:
    app: hello-world-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
